# frl

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
build-frame_utilities-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frame_utilities.cbp
build-frame_utilities-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-frame_utilities-Desktop-Default/catkin_generated/installspace/: frame_utilities.pc  frame_utilitiesConfig.cmake
build-frame_utilities-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-frame_utilities-Desktop-Default/devel/lib/pkgconfig/: frame_utilities.pc
build-frame_utilities-Desktop-Default/devel/share/frame_utilities/cmake/: frame_utilitiesConfig.cmake
build-geometry_utilities-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  geometry_utilities.cbp
build-geometry_utilities-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-geometry_utilities-Desktop-Default/catkin_generated/installspace/: _setup_util.py  geometry_utilities.pc  geometry_utilitiesConfig.cmake
build-geometry_utilities-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-geometry_utilities-Desktop-Default/devel/lib/pkgconfig/: geometry_utilities.pc
build-geometry_utilities-Desktop-Default/devel/share/geometry_utilities/cmake/: geometry_utilitiesConfig.cmake
frame_utilities/: CMakeLists.txt  package.xml
frame_utilities/include/: FramePoint.hpp  FrameTuple.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
frame_utilities/src/: FramePoint.cpp  FrameTuple.cpp  ReferenceFrame.cpp
frame_utilities/test/: FrameTupleTest.cpp  FrameUtilitiesTestHelper.hpp  ReferenceFrameTest.cpp  ReferenceFrameTestHelper.hpp  test_main.cpp
geometry_utilities/: CMakeLists.txt  package.xml
geometry_utilities/include/: AxisAngle.hpp  AxisAngle4d.hpp  Point3d.hpp  Quaternion.hpp  RigidBodyTransform.hpp  Tuple3d.hpp
geometry_utilities/src/: AxisAngle.cpp  AxisAngle4d.cpp  Point3d.cpp  Quaternion.cpp  RigidBodyTransform.cpp  Tuple3d.cpp
geometry_utilities/test/: AxisAngleTest.cpp  GeometryUtilitiesTestHelper.hpp  RigidBodyTransformTest.cpp  Tuple3dTest.cpp  test_main.cpp
include/frame_utilities/: FramePoint.hpp  FrameTuple.hpp  FrameVector.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
include/frl/frame_utilities/: FramePoint.hpp  FrameVector.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
include/frl/frames/: FramePoint.hpp  FrameVector.hpp  ReferenceFrame.hpp  ReferenceFrameHolder.hpp
include/frl/geometry/: Point3.hpp  Point3d.hpp  RigidBodyTransform.hpp
include/frl/geometry_utilities/: AxisAngle.hpp  Quaternion.hpp  RigidBodyTransform.hpp
include/frl/utils/: Utilities.hpp
include/geometry_utilities/: AxisAngle.hpp  Point3d.hpp  Quaternion.hpp  RigidBodyTransform.hpp
math_utilities/: CMakeLists.txt  package.xml
math_utilities/include/: RigidBodyTransform.hpp
math_utilities/src/: RigidBodyTransform.cpp
math_utilities/test/: RigidBodyTransformTest.cpp
src/: AxisAngle.cpp  FramePoint.cpp  FrameTuple.cpp  FrameVector.cpp  Point3d.cpp  Quaternion.cpp  ReferenceFrame.cpp  RigidBodyTransform.cpp  Tuple3d.cpp
test/: AxisAngleTest.cpp  FramePointTest.cpp  FrameTupleTest.cpp  FrameUtilitiesTestHelper.hpp  FrameVectorTest.cpp  GeometryUtilitiesTestHelper.hpp  Point3Test.cpp  Point3dTest.cpp  QuaternionTest.cpp  ReferenceFrameTest.cpp  ReferenceFrameTestHelper.hpp  RigidBodyTransformTest.cpp  Tuple3dTest.cpp
