<?xml version="1.0"?>
<package>
  <name>frame_utilities</name>
  <version>0.0.0</version>
  <description>The frame_utilities package</description>

  <maintainer email="jordan@todo.todo">jordan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_utilities</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_utilities</run_depend>

  <export>


  </export>
</package>